--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
     />
   </head>
   <body>
-    <div class="video-container">
-      <img class="userIcon" src="assest/image/icon/user.svg" />
-      <!-- <video id="video" src="assest/test.mp4" controls autoplay></video> -->
-      <video id="video" autoplay muted controls></video>
+    <div class="frameeVideo">
+      <div class="circle"></div>
+      <div class="video-container">
+        <img class="userIcon" src="assest/image/icon/user.svg" />
+        <!-- <video id="video" src="assest/test.mp4" controls autoplay></video> -->
+        <video id="video" autoplay muted controls></video>
+      </div>
+      <div class="btns">
+        <button id="startRecord">بدء التسجيل</button>
+        <button id="playRecord">تشغيل التسجيل</button>
+        <button id="stopRecord">إيقاف التسجيل</button>
+        <button id="downloadRecord">تحميل الفيديو</button>
+        <!-- <button onClick="recordStream()">Record camera</button>
+        <button onClick="recordScreenAndAudio()">Record Screen and audio</button>
+        <button onClick="stopRecording()">Stop!</button> -->
+      </div>
     </div>
-    <div class="btns">
-      <button id="startRecord">بدء التسجيل</button>
-      <button id="playRecord">تشغيل التسجيل</button>
-      <button id="stopRecord">إيقاف التسجيل</button>
-      <button id="downloadRecord">تحميل الفيديو</button>
-      <!-- <button onClick="recordStream()">Record camera</button>
-      <button onClick="recordScreenAndAudio()">Record Screen and audio</button>
-      <button onClick="stopRecording()">Stop!</button> -->
-    </div>
-    <div id="vid"></div>
     <script src="assest/main.js"></script>
   </body>
 </html>
