change style btn

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     </div>
 
     <div class="btns">
-      <!-- <div class="btn_play_pause">
+      <div class="btn_play_pause">
         <button id="stopRecord">
           <img src="assest/image/icon/stop.svg" />
         </button>
         <button id="startRecord">
           <img src="assest/image/icon/pause.svg" />
         </button>
-      </div> -->
+      </div>
       <button class="btn" id="start">
         <img src="assest/image/icon/recording.svg" /><span class="text"
           >بدء التشغيل</span
