active all function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="frameeVideo">
-      <div class="circle"></div>
+      <div class="circle animation"></div>
       <div class="video-container">
         <img class="userIcon" src="assest/image/icon/user.svg" />
         <!-- <video id="video" src="assest/test.mp4" controls autoplay></video> -->
@@ -27,7 +27,7 @@
         <button id="stopRecord">
           <img src="assest/image/icon/stop.svg" />
         </button>
-        <button id="startRecord">
+        <button id="pauseRecord">
           <img src="assest/image/icon/pause.svg" />
         </button>
       </div>
@@ -46,8 +46,7 @@
           >المايك</span
         >
       </button>
-      <!-- <button id="playRecord">تشغيل التسجيل</button>
-        <button id="downloadRecord">تحميل الفيديو</button> -->
+      
     </div>
     <script src="assest/main.js"></script>
   </body>
