add current time

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div class="frameeVideo">
       <div class="circle animation"></div>
+      <p id="current-time">Current Time: 0:00</p>
       <div class="video-container">
         <img class="userIcon" src="assest/image/icon/user.svg" />
         <video id="video" autoplay muted></video>
@@ -45,7 +46,6 @@
           >المايك</span
         >
       </button>
-      
     </div>
     <script src="assest/main.js"></script>
   </body>
