edit current time

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div class="frameeVideo">
-      <div class="circle animation"></div>
-      <p id="current-time">Current Time: 0:00</p>
+        <div class="circle animation"></div>
+        <p id="current-time">0:00</p>
       <div class="video-container">
         <img class="userIcon" src="assest/image/icon/user.svg" />
         <video id="video" autoplay muted></video>
