--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,42 +11,108 @@
       media="screen"
       href="assest/style.css"
     />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <div class="frameeVideo">
-        <div class="circle animation"></div>
-        <p id="current-time">0:00</p>
-      <div class="video-container">
-        <img class="userIcon" src="assest/image/icon/user.svg" />
-        <video id="video" autoplay muted></video>
+    <div class="container-fluid">
+      <div class="row mb-5 w-100 h-75">
+        <div class="col-12">
+          <div class="frameeVideo">
+            <div class="circle animation"></div>
+            <p id="current-time">0:00</p>
+            <div class="video-container">
+              <img class="userIcon" src="assest/image/icon/user.svg" />
+              <video id="video" autoplay muted></video>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row m-0 mt-5 align-items-end fs-2">
+        <div class="btns">
+          <div class="col-xl-1 col-3 btns_play_pause">
+            <div class="btn_play_pause">
+              <button class="btn" id="stopRecord">
+                <div class="row w-100">
+                  <div class="col-12 p-0">
+                    <img src="assest/image/icon/stop.svg" />
+                  </div>
+                </div>
+              </button>
+              <button class="btn" id="pauseRecord">
+                <div class="row w-100">
+                  <div class="col-12 p-0">
+                    <img src="assest/image/icon/pause.svg" />
+                  </div>
+                </div>
+              </button>
+            </div>
+          </div>
+
+          <div class="col-xl-1 col-5 col-md-3">
+            <button class="btn" id="start">
+              <div class="row w-100">
+                <div class="col-2 p-0">
+                  <img src="assest/image/icon/recording.svg" />
+                </div>
+                <div class="col-6 w-75 p-0">
+                  <span class="text">بدء التشغيل</span>
+                </div>
+              </div>
+            </button>
+          </div>
+
+          <div class="col-xl-1 col-md-2">
+            <button class="btn" id="camera">
+              <div class="row w-100">
+                <div class="col-3 p-0">
+                  <img src="assest/image/icon/Camera.svg" />
+                </div>
+                <div class="col-6 w-75">
+                  <span class="text">الكاميرا</span>
+                </div>
+              </div>
+            </button>
+          </div>
+
+          <div class="col-xl-1 col-md-2">
+            <button class="btn" id="microphone">
+              <div class="row w-100">
+                <div class="col-3 p-0">
+                  <img src="assest/image/icon/Microphone.svg" />
+                </div>
+                <div class="col-6 w-75">
+                  <span class="text">المايك</span>
+                </div>
+              </div>
+            </button>
+          </div>
+
+          
+
+        </div>
       </div>
     </div>
 
-    <div class="btns">
-      <div class="btn_play_pause">
-        <button id="stopRecord">
-          <img src="assest/image/icon/stop.svg" />
-        </button>
-        <button id="pauseRecord">
-          <img src="assest/image/icon/pause.svg" />
-        </button>
-      </div>
-      <button class="btn" id="start">
-        <img src="assest/image/icon/recording.svg" /><span class="text"
-          >بدء التشغيل</span
-        >
-      </button>
-      <button class="btn" id="camera">
-        <img src="assest/image/icon/Camera.svg" /><span class="text"
-          >الكاميرا</span
-        >
-      </button>
-      <button class="btn" id="microphone">
-        <img src="assest/image/icon/Microphone.svg" /><span class="text"
-          >المايك</span
-        >
-      </button>
-    </div>
     <script src="assest/main.js"></script>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
   </body>
 </html>
