--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row mb-5 w-100 h-75">
+      <div class="row w-100">
         <div class="col-12">
           <div class="frameeVideo">
             <div class="circle animation"></div>
